# Proyectoll-Progra-I

./: CMakeLists.txt  Curso.cpp  Curso.h  Grupo.cpp  Grupo.h  ListaCursos.cpp  ListaCursos.h  ListaGrupos.cpp  ListaGrupos.h  ListaPeriodos.cpp  ListaPeriodos.h  ListaProfesores.cpp  ListaProfesores.h  Menu.cpp  Menu.h  NodoCursos.cpp  NodoCursos.h  NodoGrupos.cpp  NodoGrupos.h  NodoPeriodos.cpp  NodoPeriodos.h  NodoProfesores.cpp  NodoProfesores.h  Periodo.cpp  Periodo.h  Profesor.cpp  Profesor.h  Universidad.cpp  Universidad.h  datos.txt  estudiante.cpp  estudiante.h  horario.cpp  horario.h  listaEstu.cpp  listaEstu.h  main.cpp  nodoEstu.cpp  nodoEstu.h
